--- a/index.html
+++ b/index.html
@@ -342,7 +342,6 @@
 	<!--SECTION 6-->
 	<div class="section">
 		<div class="s6">
-			
 			<div class="s6_header">
 				<div class="s6_header_mobile">
 					<span class="s6_header_mobile_title">what's hot?</span>
@@ -368,84 +367,464 @@
 				</div>
 			</div>
 			<div class="s6_mySlides ">
-				<div class="s6_8_tile fade ">
-					<div class="cart_hover">
-						<img src="images/6-cart.png" alt="">
-						<br>
-						<span>shop it</span>
-					</div>
-					<img src="images/6-1.jpg" alt="" class="s8_tile_image">
-					<div class="s6_8_tile_text">
-						<p class="s6_8_tile_name">mimosa lace dress</p>
-						<p class="s6_8_tile_price">
-							<span class="s6_8_tile_price_currency">$</span>
-							<span class="s6_8_tile_price_number">76.95</span>
-						</p>
-						<br>
-						<a href="#"> <button type="text" class="add_to_cart_button">
+				<div class="s6_mySlides_left">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-1.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">mimosa lace dress</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">76.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
 								<span>add to cart</span>
 									<img src="images/button-plus.png" alt="">
 							</button>
-						</a>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">feel tank</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">59.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
 					</div>
 				</div>
-				<div class="s6_8_tile fade ">
-					<div class="s6_8_tile_sale">
-						<div class="s6_8_tile_sale_bg"></div>
-						<span class="s6_8_tile_sale_text">sale</span>
-					</div>
-					<img src="images/6-2.jpg" alt="" class="s8_tile_image">
-					<div class="s6_8_tile_text">
-						<p class="s6_8_tile_name">feel tank</p>
-						<p class="s6_8_tile_price">
-							<span class="s6_8_tile_price_currency">$</span>
-							<span class="s6_8_tile_price_number">59.95</span>
-						</p>
-						<br>
-						<a href="#"> <button type="text" class="add_to_cart_button">
+				<div class="s6_mySlides_right">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">hot shorts</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">35.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
 								<span>add to cart</span>
 									<img src="images/button-plus.png" alt="">
 							</button>
-						</a>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="s6_8_tile fade ">
-					<img src="images/6-3.jpg" alt="" class="s8_tile_image">
-					<div class="s6_8_tile_text">
-						<p class="s6_8_tile_name">hot shorts</p>
-						<p class="s6_8_tile_price">
-							<span class="s6_8_tile_price_currency">$</span>
-							<span class="s6_8_tile_price_number">35.95</span>
-						</p>
-						<br>
-						<a href="#"> <button type="text" class="add_to_cart_button">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-4.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">petrol sweater</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">21.50</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
 								<span>add to cart</span>
 									<img src="images/button-plus.png" alt="">
 							</button>
-						</a>
-					</div>
-				</div>
-				<div class="s6_8_tile fade ">
-					<div class="s6_8_tile_sale">
-						<div class="s6_8_tile_sale_bg"></div>
-						<span class="s6_8_tile_sale_text">sale</span>
-					</div>
-					<img src="images/6-4.jpg" alt="" class="s8_tile_image">
-					<div class="s6_8_tile_text">
-						<p class="s6_8_tile_name">petrol sweater</p>
-						<p class="s6_8_tile_price">
-							<span class="s6_8_tile_price_currency">$</span>
-							<span class="s6_8_tile_price_number">21.50</span>
-						</p>
-						<br>
-						<a href="#"> <button type="text" class="add_to_cart_button">
-								<span>add to cart</span>
-									<img src="images/button-plus.png" alt="">
-							</button>
-						</a>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="s6_mySlides ">
+				<div class="s6_mySlides_left">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-5.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">mimosa lace dress</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">76.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-4.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">feel tank</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">59.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="s6_mySlides_right">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">hot shorts</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">35.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">petrol sweater</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">21.50</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="s6_mySlides ">
+				<div class="s6_mySlides_left">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">mimosa lace dress</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">76.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">feel tank</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">59.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="s6_mySlides_right">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-1.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">hot shorts</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">35.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-5.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">petrol sweater</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">21.50</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="s6_mySlides ">
+				<div class="s6_mySlides_left">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">mimosa lace dress</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">76.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">feel tank</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">59.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="s6_mySlides_right">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">hot shorts</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">35.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-1.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">petrol sweater</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">21.50</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
 		</div>
 	</div>
 	<!--SECTION 7-->
@@ -467,7 +846,16 @@
 		<div class="s8">
 			<div class="s8_left">
 				<div class="s6_8_tile">
-					<img src="images/8-1.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_image_container">
+						<img src="images/8-1.jpg" alt="" class="s6_8_tile_image">
+						<a href="#">
+							<div class="cart_hover">
+								<img src="images/6-cart.png" alt="">
+								<br>
+								<span>shop it</span>
+							</div>
+						</a>
+					</div>
 					<div class="s6_8_tile_text">
 						<p class="s6_8_tile_name">nadia dress</p>
 						<p class="s6_8_tile_price">
@@ -487,7 +875,16 @@
 						<div class="s6_8_tile_sale_bg"></div>
 						<span class="s6_8_tile_sale_text">sale</span>
 					</div>
-					<img src="images/8-2.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_image_container">
+						<img src="images/8-2.jpg" alt="" class="s6_8_tile_image">
+						<a href="#">
+							<div class="cart_hover">
+								<img src="images/6-cart.png" alt="">
+								<br>
+								<span>shop it</span>
+							</div>
+						</a>
+					</div>
 					<div class="s6_8_tile_text">
 						<p class="s6_8_tile_name">sofi blouse</p>
 						<p class="s6_8_tile_price">
@@ -505,7 +902,16 @@
 			</div>
 			<div class="s8_right">
 				<div class="s6_8_tile">
-					<img src="images/8-3.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_image_container">
+						<img src="images/8-3.jpg" alt="" class="s6_8_tile_image">
+						<a href="#">
+							<div class="cart_hover">
+								<img src="images/6-cart.png" alt="">
+								<br>
+								<span>shop it</span>
+							</div>
+						</a>
+					</div>
 					<div class="s6_8_tile_text">
 						<p class="s6_8_tile_name">gooding shorts</p>
 						<p class="s6_8_tile_price">
@@ -525,7 +931,16 @@
 						<div class="s6_8_tile_sale_bg"></div>
 						<span class="s6_8_tile_sale_text">sale</span>
 					</div>
-					<img src="images/8-4.jpg" alt="" class="s8_tile_image">
+					<div class="s6_8_tile_image_container">
+						<img src="images/8-4.jpg" alt="" class="s6_8_tile_image">
+						<a href="#">
+							<div class="cart_hover">
+								<img src="images/6-cart.png" alt="">
+								<br>
+								<span>shop it</span>
+							</div>
+						</a>
+					</div>
 					<div class="s6_8_tile_text">
 						<p class="s6_8_tile_name">mimosa lace dress</p>
 						<p class="s6_8_tile_price">
