Fix content on the page

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
 						</button>
 				</div>
 			</div>
+			<!--WHAT'S HOT? SECTION-->
 			<div class="s6_mySlides ">
 				<div class="s6_mySlides_left">
 					<div class="s6_8_tile fade ">
@@ -480,6 +481,7 @@
 					</div>
 				</div>
 			</div>
+			<!--DESIGNERS SECTION-->
 			<div class="s6_mySlides ">
 				<div class="s6_mySlides_left">
 					<div class="s6_8_tile fade ">
@@ -494,10 +496,10 @@
 							</a>
 						</div>
 						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">mimosa lace dress</p>
+							<p class="s6_8_tile_name">zebra dress</p>
 							<p class="s6_8_tile_price">
 								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">76.95</span>
+								<span class="s6_8_tile_price_number">84.99</span>
 							</p>
 							<br>
 							<a href="#"> <button type="text" class="add_to_cart_button">
@@ -523,10 +525,10 @@
 							</a>
 						</div>
 						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">feel tank</p>
+							<p class="s6_8_tile_name">petrol sweater</p>
 							<p class="s6_8_tile_price">
 								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">59.95</span>
+								<span class="s6_8_tile_price_number">21.50</span>
 							</p>
 							<br>
 							<a href="#"> <button type="text" class="add_to_cart_button">
@@ -539,6 +541,10 @@
 				</div>
 				<div class="s6_mySlides_right">
 					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
 							<a href="#">
@@ -550,10 +556,10 @@
 							</a>
 						</div>
 						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">hot shorts</p>
+							<p class="s6_8_tile_name">wishvitalise dress</p>
 							<p class="s6_8_tile_price">
 								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">35.95</span>
+								<span class="s6_8_tile_price_number">96.55</span>
 							</p>
 							<br>
 							<a href="#"> <button type="text" class="add_to_cart_button">
@@ -579,64 +585,6 @@
 							</a>
 						</div>
 						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">petrol sweater</p>
-							<p class="s6_8_tile_price">
-								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">21.50</span>
-							</p>
-							<br>
-							<a href="#"> <button type="text" class="add_to_cart_button">
-								<span>add to cart</span>
-									<img src="images/button-plus.png" alt="">
-							</button>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="s6_mySlides ">
-				<div class="s6_mySlides_left">
-					<div class="s6_8_tile fade ">
-						<div class="s6_8_tile_image_container">
-							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
-								<div class="cart_hover">
-									<img src="images/6-cart.png" alt="">
-									<br>
-									<span>shop it</span>
-								</div>
-							</a>
-						</div>
-						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">mimosa lace dress</p>
-							<p class="s6_8_tile_price">
-								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">76.95</span>
-							</p>
-							<br>
-							<a href="#"> <button type="text" class="add_to_cart_button">
-								<span>add to cart</span>
-									<img src="images/button-plus.png" alt="">
-							</button>
-							</a>
-						</div>
-					</div>
-					<div class="s6_8_tile fade ">
-						<div class="s6_8_tile_sale">
-							<div class="s6_8_tile_sale_bg"></div>
-							<span class="s6_8_tile_sale_text">sale</span>
-						</div>
-						<div class="s6_8_tile_image_container">
-							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
-								<div class="cart_hover">
-									<img src="images/6-cart.png" alt="">
-									<br>
-									<span>shop it</span>
-								</div>
-							</a>
-						</div>
-						<div class="s6_8_tile_text">
 							<p class="s6_8_tile_name">feel tank</p>
 							<p class="s6_8_tile_price">
 								<span class="s6_8_tile_price_currency">$</span>
@@ -651,10 +599,13 @@
 						</div>
 					</div>
 				</div>
-				<div class="s6_mySlides_right">
+			</div>
+			<!--FEATURED SECTION-->
+			<div class="s6_mySlides ">
+				<div class="s6_mySlides_left">
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
-							<img src="images/6-1.jpg" alt="" class="s6_8_tile_image">
+							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
 							<a href="#">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
@@ -682,6 +633,62 @@
 							<div class="s6_8_tile_sale_bg"></div>
 							<span class="s6_8_tile_sale_text">sale</span>
 						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">wishvitalise dress</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">96.55</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="s6_mySlides_right">
+					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-4.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">petrol sweater</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">21.50</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-5.jpg" alt="" class="s6_8_tile_image">
 							<a href="#">
@@ -693,10 +700,10 @@
 							</a>
 						</div>
 						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">petrol sweater</p>
+							<p class="s6_8_tile_name">zebra dress</p>
 							<p class="s6_8_tile_price">
 								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">21.50</span>
+								<span class="s6_8_tile_price_number">84.99</span>
 							</p>
 							<br>
 							<a href="#"> <button type="text" class="add_to_cart_button">
@@ -708,9 +715,14 @@
 					</div>
 				</div>
 			</div>
+			<!--LATEST SECTION-->
 			<div class="s6_mySlides ">
 				<div class="s6_mySlides_left">
 					<div class="s6_8_tile fade ">
+						<div class="s6_8_tile_sale">
+							<div class="s6_8_tile_sale_bg"></div>
+							<span class="s6_8_tile_sale_text">sale</span>
+						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
 							<a href="#">
@@ -722,10 +734,10 @@
 							</a>
 						</div>
 						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">mimosa lace dress</p>
+							<p class="s6_8_tile_name">wishvitalise dress</p>
 							<p class="s6_8_tile_price">
 								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">76.95</span>
+								<span class="s6_8_tile_price_number">96.55</span>
 							</p>
 							<br>
 							<a href="#"> <button type="text" class="add_to_cart_button">
@@ -736,39 +748,8 @@
 						</div>
 					</div>
 					<div class="s6_8_tile fade ">
-						<div class="s6_8_tile_sale">
-							<div class="s6_8_tile_sale_bg"></div>
-							<span class="s6_8_tile_sale_text">sale</span>
-						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
-								<div class="cart_hover">
-									<img src="images/6-cart.png" alt="">
-									<br>
-									<span>shop it</span>
-								</div>
-							</a>
-						</div>
-						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">feel tank</p>
-							<p class="s6_8_tile_price">
-								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">59.95</span>
-							</p>
-							<br>
-							<a href="#"> <button type="text" class="add_to_cart_button">
-								<span>add to cart</span>
-									<img src="images/button-plus.png" alt="">
-							</button>
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="s6_mySlides_right">
-					<div class="s6_8_tile fade ">
-						<div class="s6_8_tile_image_container">
-							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
 							<a href="#">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
@@ -791,11 +772,38 @@
 							</a>
 						</div>
 					</div>
+				</div>
+				<div class="s6_mySlides_right">
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_sale">
 							<div class="s6_8_tile_sale_bg"></div>
 							<span class="s6_8_tile_sale_text">sale</span>
 						</div>
+						<div class="s6_8_tile_image_container">
+							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
+							<a href="#">
+								<div class="cart_hover">
+									<img src="images/6-cart.png" alt="">
+									<br>
+									<span>shop it</span>
+								</div>
+							</a>
+						</div>
+						<div class="s6_8_tile_text">
+							<p class="s6_8_tile_name">feel tank</p>
+							<p class="s6_8_tile_price">
+								<span class="s6_8_tile_price_currency">$</span>
+								<span class="s6_8_tile_price_number">59.95</span>
+							</p>
+							<br>
+							<a href="#"> <button type="text" class="add_to_cart_button">
+								<span>add to cart</span>
+									<img src="images/button-plus.png" alt="">
+							</button>
+							</a>
+						</div>
+					</div>
+					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-1.jpg" alt="" class="s6_8_tile_image">
 							<a href="#">
@@ -807,10 +815,10 @@
 							</a>
 						</div>
 						<div class="s6_8_tile_text">
-							<p class="s6_8_tile_name">petrol sweater</p>
+							<p class="s6_8_tile_name">mimosa lace dress</p>
 							<p class="s6_8_tile_price">
 								<span class="s6_8_tile_price_currency">$</span>
-								<span class="s6_8_tile_price_number">21.50</span>
+								<span class="s6_8_tile_price_number">76.95</span>
 							</p>
 							<br>
 							<a href="#"> <button type="text" class="add_to_cart_button">
@@ -836,7 +844,6 @@
 				<div class="s7_content_line2">
 					<div>50</div>
 					<div>%<br>off</div>
-					<!--<span>off</span>-->
 				</div>
 			</div>
 		</div>
@@ -942,10 +949,10 @@
 						</a>
 					</div>
 					<div class="s6_8_tile_text">
-						<p class="s6_8_tile_name">mimosa lace dress</p>
+						<p class="s6_8_tile_name">lily dress</p>
 						<p class="s6_8_tile_price">
 							<span class="s6_8_tile_price_currency">$</span>
-							<span class="s6_8_tile_price_number">76.00</span>
+							<span class="s6_8_tile_price_number">76.99</span>
 						</p>
 						<br>
 						<a href="#"> <button type="text" class="add_to_cart_button">
