Fix links and mobile menu button

--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
 			<div class="s4_right">
 				<div class="s4_right_text">Find us here</div>
 				<div class="s4_social">
-					<a href="">
+					<a href="https://www.facebook.com/" target="_blank" >
 						<div class="s4_social_link s4_social_link1"><img src="images/4-fb.png" alt="" class="s4_social_link_pic"></div>
 					</a>
-					<a href="">
+					<a href="https://www.pinterest.com/" target="_blank">
 						<div class="s4_social_link s4_social_link2 "><img src="images/4-pn.png" alt="" class="s4_social_link_pic"></div>
 					</a>
-					<a href="">
+					<a href="https://twitter.com/" target="_blank" >
 						<div class="s4_social_link s4_social_link3 "><img src="images/4-tw.png" alt="" class="s4_social_link_pic"></div>
 					</a>
 				</div>
