Work on styles for sections 15-16

--- a/productpage.html
+++ b/productpage.html
@@ -197,14 +197,14 @@
     <div class="s15">
       <hr class="s15_line1">
       <ul class="s15_breadcrumbs">
-        <li class="s15_breadcrumbs_item">
-          <img src="images/productpage/home-icon.png" alt="" class="s15_home_icon">
+         <li class="s15_breadcrumbs_item">   <a href="#"> 
+          <img src="images/productpage/home-icon.png" alt="" class="s15_home_icon"> </a>
         </li>
-        <li class="s15_breadcrumbs_item">Women</li>
-        <li class="s15_breadcrumbs_item">Clothing</li>
-        <li class="s15_breadcrumbs_item">Blouses & Shirts</li>
-        <li class="s15_breadcrumbs_item">B. young</li>
-        <li class="s15_breadcrumbs_item">Sofi Blouse</li>
+       <li class="s15_breadcrumbs_item"><a href="#">Women</a></li>
+         <li class="s15_breadcrumbs_item"><a href="#"> Clothing</a></li>
+        <li class="s15_breadcrumbs_item"><a href="#">Blouses & Shirts</a></li>
+         <li class="s15_breadcrumbs_item"> <a href="#"> B. young</a></li>
+           <li class="s15_breadcrumbs_item"><a href="#">Sofi Blouse</a></li>
       </ul>
       <hr class="s15_line2">
     </div>
@@ -214,30 +214,30 @@
     <div class="s16">
       <div class="s16_left">
         <div class="s16_product_main">
-          <img src="" alt="" class="s16_product_main_pic">
+          <img src="images/productpage/product-main.jpg" alt="" class="s16_product_main_pic">
         </div>
         <div class="s16_product_small_container">
           <div class="s16_product_small">
-            <img src="" alt="" class="s16_product_small_pic">
+            <img src="images/productpage/product-small-1.jpg" alt="" class="s16_product_small_pic">
           </div>
           <div class="s16_product_small">
-            <img src="" alt="" class="s16_product_small_pic">
+            <img src="images/productpage/product-small-2.jpg" alt="" class="s16_product_small_pic">
           </div>
           <div class="s16_product_small">
-            <img src="" alt="" class="s16_product_small_pic">
+            <img src="images/productpage/product-small-3.jpg" alt="" class="s16_product_small_pic">
           </div>
           <div class="s16_product_small">
-            <img src="" alt="" class="s16_product_small_pic">
+            <img src="images/productpage/product-small-4.jpg" alt="" class="s16_product_small_pic">
           </div>
         </div>
       </div>
       <div class="s16_right">
         <div class="s16_breadcrumb">
-          <img src="" alt="">
+          <img src="images/productpage/back-icon.png" alt="">
           <span>Back to</span>
           <a href="#">Women's Clothing</a>
         </div>
-        <h3>Sofi Blouse</h3>
+        <h3 class="s16_product_name" >Sofi Blouse</h3>
         <div class="s16_price_reviews_container">
           <div class="s16_price">
             <span class="s16_price_currency">$</span>
@@ -266,7 +266,8 @@
             <div class="s16_size_selection">
               <span class="s16_current_size">Select size</span>
               <button class="s16_size_selection_button">
-                <img src="" alt="">
+                 <!--check picture-->
+                <img src="images/caret-dark.png" alt=""> 
               </button>
             </div>
             <div class="s16_size_list_container">
@@ -333,6 +334,68 @@
       </div>
     </div>
   </div>
+
+  <!--SECTION 18-->
+  <div class="section">
+    <div class="s18">
+      <div class="s18_container">
+        <div class="s18_container_title">
+          <button class="s18_container_button">
+            <img src="" alt="">
+          </button>
+          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_number"></span>
+        </div>
+        <div class="s18_container_content"></div>
+      </div>
+      <div class="s18_container">
+        <div class="s18_container_title">
+          <button class="s18_container_button">
+            <img src="" alt="">
+          </button>
+          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_number"></span>
+        </div>
+        <div class="s18_container_content"></div>
+      </div>
+      <div class="s18_container">
+        <div class="s18_container_title">
+          <button class="s18_container_button">
+            <img src="" alt="">
+          </button>
+          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_number"></span>
+        </div>
+        <div class="s18_container_content"></div>
+      </div>
+      <div class="s18_container">
+        <div class="s18_container_title">
+          <button class="s18_container_button">
+            <img src="" alt="">
+          </button>
+          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_number"></span>
+        </div>
+        <div class="s18_container_content"></div>
+      </div>
+      <div class="s18_container">
+        <div class="s18_container_title">
+          <button class="s18_container_button">
+            <img src="" alt="">
+          </button>
+          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_number"></span>
+        </div>
+        <div class="s18_container_content"></div>
+      </div>
+      
+  
+      
+  
+    </div>
+  </div>
+
+
 
 
   <!--SECTION 14-->
